<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Math Is Fun</string>
    <string name="nomorExam">%d.</string>
    <string name="result_score">%d / 100</string>
    <string name="btn_cobalagi">Coba Lagi</string>
    <string name="btn_kembali">Kembali</string>
    <string name="btn_penyelesaian">Penyelesaian</string>
    <string name="btn_latihan1_no1_opsi1">9</string>
    <string name="btn_latihan1_no1_opsi2">12</string>
    <string name="btn_latihan1_no1_opsi3">10</string>
    <string name="btn_latihan1_no1_opsi4">8</string>
    <string name="btn_latihan1_no2_opsi1">03:00</string>
    <string name="btn_latihan1_no2_opsi2">12:00</string>
    <string name="btn_latihan1_no2_opsi3">04:00</string>
    <string name="btn_latihan1_no2_opsi4">06:00</string>
    <string name="soal_latihan1_no3">Bangun yang mempunyai 2 buah lingkaran di bagian atas dan bawahnya adalah…</string>
    <string name="btn_latihan1_no3_opsi1">Kerucut</string>
    <string name="btn_latihan1_no3_opsi2">Tabung</string>
    <string name="btn_latihan1_no3_opsi3">Bola</string>
    <string name="btn_latihan1_no3_opsi4">Balok</string>
    <string name="soal_latihan1_no5">Bentuk amplop adalah…</string>
    <string name="btn_latihan1_no5_opsi1">Segitiga</string>
    <string name="btn_latihan1_no5_opsi2">Lingkaran</string>
    <string name="btn_latihan1_no5_opsi3">Segiempat</string>
    <string name="btn_latihan1_no5_opsi4">Segilima</string>
    <string name="solusi_latihan1_no1">Jumlah apel pertama ada 9, selanjutnya jumlah apel kedua ada 6, lalu jumlah apel terakhir ada 3. Maka 9 + 6 – 3 adalah 12.</string>
    <string name="solusi_latihan1_no2">Jarum panjang dari jam tersebut menunjuk ke arah angka 12 dan jarum pendek jam tersebut menunjuk ke arah angka 3. Maka artinya jam tersebut menunjukkan pukul 03:00</string>
    <string name="solusi_latihan1_no3">Tabung memiliki sisi berbentuk persegi panjang yang menyelimuti bagian tengahnya. Lalu sisi berbentuk lingkaran pada bagian atas dan bawahnya. Jadi jawabannya adalah tabung.</string>
    <string name="solusi_latihan1_no4">Jawaban yang tepat adalah buku lebih ringan daripada tas.</string>
    <string name="solusi_latihan1_no5">Amplop memiliki 4 sisi. Maka amplop memiliki bentuk segiempat.</string>
    <string name="solusi_latihan2_no1">Lambang bilangan dari seratus sebelas adalah 111.</string>
    <string name="solusi_latihan2_no2">Selisih artinya pengurangan. Maka 397 dikurangi dengan 53 hasilnya adalah 344</string>
    <string name="solusi_latihan2_no3">Karena pada 1 kotak pensil isinya ada 3 pensil. Maka untuk mencari banyaknya pensil pada 6 kotak pensil kita dapat mengalikan banyaknya kotak pensil dengan jumlah isi pensilnya. Sehingga 6 x 3 hasilnya adalah 18.</string>
    <string name="solusi_latihan2_no4">Sinta diberikan gula oleh tetangganya yang artinya jumlah gula Sinta bertambah dari 5 menjadi 7. Karena jawaban yang dibutuhkan dalam satuan gram maka ubahlah 7 kg menjadi satuannya gram. 1 kg sama dengan 1000 gram, maka 7 kg sama dengan 7000 gram.</string>
    <string name="solusi_latihan2_no5">Jumlah sisi pada bangun segitiga ada 3. Maka jawabannya adalah 3.</string>
    <string name="solusi_latihan3_no1">Nilai Siska = 89\nNilai Dita = 94\nUntuk mencari selisih maka nilai Dita dikurangi dengan nilai Siska. Jadi 94 – 89 = 5. Maka selisih nilai mereka adalah 5.</string>
    <string name="solusi_latihan3_no2">Untuk mencari total berat dari cokelat yaitu dengan menjumlahkan semua berat tersebut. 5 + 1 + 2 = 8. Sehingga total berat dari cokelat adalah 8 ons.</string>
    <string name="solusi_latihan3_no3">Banyaknya pizza adalah 1. Lalu pizza tersebut dibagi menjadi 8. Maka dapat diubah menjadi pecahan satu per delapan atau dapat ditulis 1/8</string>
    <string name="solusi_latihan3_no4">- Segitiga lancip merupakan segitiga yang salah satu sudutnya memiliki ukuran kurang dari 90°.\n- Segitiga siku-siku merupakan segitiga yang salah satu sudutnya memiliki ukuran sudut 90°.\n- Segitiga tumpul merupakan segitiga yang salah satu sudutnya memiliki ukuran lebih dari 90°.</string>
    <string name="solusi_latihan3_no5">Rumus dari keliling persegi adalah sisi + sisi + sisi + sisi. Maka 4 + 4 + 4 + 4 = 16. Sehingga keliling persegi tersebut adalah 16</string>
    <string name="solusi_latihan4_no1">Pizza dipotong menjadi 8 bagian. Doni mengambil 3 bagian dari pizza dari 8. Maka pecahan yang menyatakan bagian pizza yang Doni ambil adalah 3/8</string>
    <string name="solusi_latihan4_no2">Taksiran atas ke puluhan terdekat adalah 3.860. Lalu untuk taksiran ke ratusan terdekat adalah 3.900. Sedangkan untuk taksiran ke ribuan terdekat adalah 4.000. Karena yang diminta adalah taksiran ke ribuan terdekat maka jawabannya adalah 4.000</string>
    <string name="solusi_latihan4_no4">Total sudut dari segitiga adalah 180°. KArena segitiga sama sisi memiliki besar sudut yang sama maka 180° dibagi menjadi 3 sesuai banyaknya sudut segitiga. Jadi besar sudutnya adalah 60°.</string>
    <string name="solusi_latihan4_no5">Pertama kita urutkan dahulu nilai-nilai tersebut. 65, 67, 70, 78, 78, 78, 78, 79, 80, 82, 83, 84, 85, 88, 89, 89, 90, 90 98, 98. Nilai tertinggi yang didapat ada 2 nilai 98 maka frekuensi nilai tertinggi adalah 2.</string>
    <string name="solusi_latihan5_no1">Karena donat mereka digabungkan maka jumlahkan donat Beni dan donat Deny. 3/12 + 2/6. Karena penyebutnya berbeda maka ubahlah agar dapat dijumlahkan. Setelah dirubah akan menjadi 3/12 + 4/12. Selanjutnya jumlahkan saja pecahan tersebut. Maka hasilnya adalah 7/12.</string>
    <string name="solusi_latihan5_no2">Satuan akhir yang diminta adalah meter per detik. Ubahlah 5 menit menjadi detik. 1 menitnya adalah 60 detik, maka 5 menit sama dengan 300 detik. Rumus dari kecepatan adalah jarak dibagi dengan waktu. Jarak yang ditempuh adalah 900 meter dan waktu yang dibutuhkan adalah 300 detik. Sehingga 900 : 300 = 3. Jadi kecepatannya adalah 3m/s</string>
    <string name="solusi_latihan5_no3">Dalam 1 ember dapat diisi dengan 5 gayung air. Jadi 30 dibagi 5 sama dengan 6. Maka 30 gayung dapat mengisi 6 ember.</string>
    <string name="solusi_latihan5_no4">Rumus volume balok adalah panjang x lebar x tinggi. Maka 4 x 5 x 6 adalah 120.</string>
    <string name="solusi_latihan5_no5">06.59 – 06.30. Maka waktu yang dibutuhkan Tina adalah 29 menit.</string>
    <string name="solusi_latihan6_no1">Total harga dikurangi dengan uang yang ibu bawa. Jadi 36.500 – 24.000 adalah 12.500</string>
    <string name="solusi_latihan6_no2">Bayangkan jumlah yang harus dibayar adalah 12 sedangkan kamu baru mempunyai 5. Maka sisa jumlah yang harus dibayar adalah 7. Karena bayarannya kurang maka -7.</string>
    <string name="solusi_latihan6_no3">Rumus dari luas permukaan bola adalah L = 4 x π x r².\nL = 4 x 22/7 x 14 x 14\nL = 2.464 cm²\nJadi luas permukaan bola adalah 2.464 cm²</string>
    <string name="solusi_latihan6_no4">Karena yang ditanya adalah negatif maka tambahkan lambang negatif yaitu -20</string>
    <string name="solusi_latihan6_no5">Modus merupakan nilai yang sering muncul. Urutkan terlebih dahulu angka-angka yang didapatkan. 1 1 2 2 2 3 3 3 3 4 4 4 4 4 5 5 5 5 5 5 6 6 6 6 6. Angka yang sering muncul adalah angka 5. Jadi modusnya adalah 5</string>
    <string name="text_exam">Yeay!!\nKamu telah berhasil menyelesaikan exam. Berikut adalah hasilnya</string>
    <string name="latihan_berhasil">Yey!\nKamu berhasil menyelesaikan latihan</string>
    <string name="todo">TODO</string>
    <string name="perkalian_angka_11">Perkalian Angka 11</string>
    <string name="diberikan_soal_perkalian_63_x_11_berapakah_hasilnya_n_ncara_menjawabnya_seperti_berikut_ini">Diberikan soal perkalian 63 x 11 berapakah hasilnya?\n\nCara menjawabnya seperti berikut ini</string>
    <string name="pertama_berikan_jarak_antara_angka_6_dan_angka_3">Pertama, berikan jarak antara angka 6 dan angka 3</string>
    <string name="setelah_itu_jumlahkan_angka_6_dan_3_6_3_dan_hasilnya_adalah_9_letakkan_hasilnya_diantara_6_dan_3">Setelah itu jumlahkan angka 6 dan 3 (6 + 3) dan hasilnya adalah 9. Letakkan hasilnya diantara 6 dan 3</string>
    <string name="selesai_hasil_dari_63_x_11_adalah_693">Selesai, hasil dari 63 x 11 adalah 693.</string>
    <string name="ketika_angka_9_dikalikan_dengan_angka_1_2_3_10_dapat_menghasilkan_susunan_angka_yang_ketika_dibaca_dari_depan_atau_belakang_sama">Ketika angka 9 dikalikan dengan angka 1, 2, 3, …, 10 dapat menghasilkan susunan angka yang ketika dibaca dari depan atau belakang sama.</string>
    <string name="jika_nilai_puluhannya_semakin_besar_maka_cara_mengalikannya_akan_semakin_mudah_cara_tersebut_paling_efektif_untuk_perkalian_90_sampai_99">Jika nilai puluhannya semakin besar, maka cara mengalikannya akan semakin mudah. Cara tersebut paling efektif untuk perkalian 90 sampai 99.</string>
    <string name="bangun_datar">Bangun Datar</string>
    <string name="materi_kelas_2">Materi Kelas 2</string>
    <string name="urutan_bilangan">Urutan Bilangan</string>
    <string name="operasi_penjumlahan_dan_pengurangan">Operasi Penjumlahan dan Pengurangan</string>
    <string name="pengukuran">Pengukuran</string>
    <string name="operasi_perkalian_dan_pembagian">Operasi Perkalian dan Pembagian</string>
    <string name="masukan_nama_anda">Masukan Nama Anda</string>
    <string name="nama_pemberi_saran">Nama Pemberi Saran</string>
    <string name="masukan_kelas">Masukan Kelas</string>
    <string name="kelas">Kelas</string>
    <string name="masukan_asal_sekolah">Masukan Asal Sekolah</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="masukan_saran">Masukan Saran</string>
    <string name="saran_materi">Saran Materi Baru</string>
    <string name="kirim">KIRIM</string>
    <string name="materi_kelas_4">Materi Kelas 4</string>
    <string name="bilangan_pecahan">Bilangan Pecahan</string>
    <string name="bentuk_pecahan">Bentuk Pecahan</string>
    <string name="faktor_dan_kelipatan_bilangan">Faktor dan Kelipatan Bilangan</string>
    <string name="menentukan_kpk_dan_fpb">Menentukan Kpk dan Fpb</string>
    <string name="penerapan_kpk_fpb">Penerapan Kpk Fpb</string>
    <string name="bangun_segibanyak">Bangun Segibanyak</string>
    <string name="taksiran">Taksiran</string>
    <string name="aplikasi_pecahan">Aplikasi Pecahan</string>
    <string name="faktorisasi_prima">Faktorisasi Prima</string>
    <string name="pembulatan_hasil_pengukuran_panjang_dan_berat_ke_satuan_terdekat">Pembulatan Hasil Pengukuran Panjang dan Berat ke Satuan Terdekat</string>
    <string name="pembulatan_hasil_pengukuran_panjang_dan_berat_ke_puluhan_terdekat">Pembulatan Hasil Pengukuran Panjang dan Berat ke Puluhan Terdekat</string>
    <string name="pembulatan_hasil_pengukuran_panjang_dan_berat_ke_ratusan_terdekat">Pembulatan Hasil Pengukuran Panjang dan Berat ke Ratusan Terdekat</string>
    <string name="keliling_bangun_datar">Keliling Bangun Datar</string>
    <string name="luas_bangun_datar">Luas Bangun Datar</string>
    <string name="membaca_dan_menafsir_datar">Membaca dan Menafsir Datar</string>
    <string name="penyajian_data_dalam_diagram_batang">Penyajian Data dalam Diagram Batang</string>
    <string name="pengukuran_sudut_dalam_satuan_baku_dengan_busur_derajat">Pengukuran Sudut Dalam Satuan Baku dengan Busur Derajat</string>
    <string name="pengukuran_sudut_bangun_datar_dengan_busur_derajat">Pengukuran Sudut Bangun Datar dengan Busur Derajat</string>
    <string name="materi_kelas_5">Materi Kelas 5</string>
    <string name="operasi_hitung_pecahan">Operasi Hitung Pecahan</string>
    <string name="kecepatan_dan_debit">Kecepatan Dan Debit</string>
    <string name="skala">Skala</string>
    <string name="bangun_ruang">Bangun Ruang</string>
    <string name="pengumpulan_dan_penyajian_data">Pengumpulan Dan Penyajian Data</string>
</resources>